--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,17 @@
 </head>
 
 <body>
-    <div>
-        <p>dhfjdfjlkdfdsflkdsuhiu</p>
-    </div>
+    <nav class="nav">
+        <span class="nav-logo">A_S</span>
+        <li class="nav-list"><a href="" class="nav-items">Home</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Showcase</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Achievements</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Why Me</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Let's Talk</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Socialize</a></li>
+        <li class="nav-list"><a href="" class="nav-items">Who Am I</a></li>
+    </nav>
+
 </body>
 
 </html>
