still working on navbar

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,17 @@
 <body>
     <nav class="nav">
         <span class="nav-logo">A_S</span>
-        <li class="nav-list"><a href="" class="nav-items">Home</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Showcase</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Achievements</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Why Me</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Let's Talk</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Socialize</a></li>
-        <li class="nav-list"><a href="" class="nav-items">Who Am I</a></li>
+        <ul class="nav-ul">
+            <li class="nav-list"><a href="" class="nav-items">Home</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Showcase</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Achievements</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Why Me</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Let's Talk</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Socialize</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Who Am I</a></li>
+        </ul>
     </nav>
+
 
 </body>
 
