Done with nav and eyes follow

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,24 @@
             <li class="nav-list"><a href="" class="nav-items">Achievements</a></li>
             <li class="nav-list"><a href="" class="nav-items">Why Me</a></li>
             <li class="nav-list"><a href="" class="nav-items">Let's Talk</a></li>
-            <li class="nav-list"><a href="" class="nav-items">Socialize</a></li>
+            <li class="nav-list"><a href="" class="nav-items">Blog</a></li>
             <li class="nav-list"><a href="" class="nav-items">Who Am I</a></li>
         </ul>
     </nav>
+    <div class="eyes">
+        <div class="eye">
+            <div class="ball"></div>
+        </div>
+        <div class="eye">
+            <div class="ball"></div>
+        </div>
 
+    </div>
+
+    <div class="img">
+
+
+    </div>
 
 </body>
 
