--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,13 @@
         </div>
 
     </div>
-
-    <div class="img">
-
-
+    <div class="hero">
+        <time class="time"></time>
+        <h1 class="greeting">
+            <span class="greeting-js"> Good Morning,</span> I'm Joel
+        </h1>
+        <h2 id="description">a web developer</h2>
     </div>
-
 </body>
 
 </html>
