--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,18 +26,23 @@
         <div class="eye">
             <div class="ball"></div>
         </div>
+
         <div class="eye">
             <div class="ball"></div>
+
         </div>
 
     </div>
     <div class="hero">
         <time class="time"></time>
         <h1 class="greeting">
-            <span class="greeting-js"> Good Morning,</span> I'm Joel
+            <span class="greeting-js"> </span> I'm Joel
         </h1>
-        <h2 id="description">a web developer</h2>
+        <h2 id="description"> web developer</h2>
     </div>
+
+    <script src="./index.js"></script>
 </body>
+
 
 </html>
