--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
         </div>
 
     </div>
-    <div class="hero">
+    <main class="hero">
         <time class="time"></time>
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
         </h1>
         <h2 id="description"><span class="txt-type" data-words='["a web developer", "a web designer", "a UI/UX enthusaist", "a tech lover", "a blogger"]' data-wait="3000"></span></h2>
-    </div>
+    </main>
 
 </body>
 
