--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,40 @@
         </div>
 
     </div>
-    <main class="hero">
+
+    <div class="hero">
         <time class="time"></time>
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
         </h1>
         <h2 id="description"><span class="txt-type" data-words='["a web developer", "a web designer", "a UI/UX enthusaist", "a tech lover", "a blogger"]' data-wait="3000"></span></h2>
-    </main>
+    </div>
+
+    <div class="cards-container">
+        <div class="cards">
+            <div class="cards-main">
+                <img src="../src//img//showcase//learning_macbookpro15_front.png" alt="" class="card-pic">
+            </div>
+            <div class="cards-info"></div>
+        </div>
+        <div class="cards">
+            <div class="cards-main"></div>
+            <div class="cards-info"></div>
+        </div>
+        <div class="cards">
+            <div class="cards-main"></div>
+            <div class="cards-info"></div>
+        </div>
+        <div class="cards">
+            <div class="cards-main"></div>
+            <div class="cards-info"></div>
+        </div>
+        <div class="cards">
+            <div class="cards-main"></div>
+            <div class="cards-info"></div>
+        </div>
+    </div>
+
 
 </body>
 
