Added random image functions

--- a/src/index.html
+++ b/src/index.html
@@ -45,25 +45,26 @@
     <div class="cards-container">
         <div class="cards">
             <div class="cards-main">
-                <img src="../src//img//showcase//learning_macbookpro15_front.png" alt="" class="card-pic">
+                <img src="../src/img//showcase/learning_macbookpro15_front.png" alt="" class="card-pic">
+                <img src="../src/img/showcase/smart brain ipad_ipad_black_portrait.png " alt=" " class=" card-pic ">
             </div>
-            <div class="cards-info"></div>
+            <div class=" cards-info "></div>
         </div>
-        <div class="cards">
-            <div class="cards-main"></div>
-            <div class="cards-info"></div>
+        <div class=" cards ">
+            <div class=" cards-main "></div>
+            <div class=" cards-info "></div>
         </div>
-        <div class="cards">
-            <div class="cards-main"></div>
-            <div class="cards-info"></div>
+        <div class=" cards ">
+            <div class=" cards-main "></div>
+            <div class=" cards-info "></div>
         </div>
-        <div class="cards">
-            <div class="cards-main"></div>
-            <div class="cards-info"></div>
+        <div class=" cards ">
+            <div class=" cards-main "></div>
+            <div class=" cards-info "></div>
         </div>
-        <div class="cards">
-            <div class="cards-main"></div>
-            <div class="cards-info"></div>
+        <div class=" cards ">
+            <div class=" cards-main "></div>
+            <div class=" cards-info "></div>
         </div>
     </div>
 
