--- a/src/index.html
+++ b/src/index.html
@@ -43,29 +43,42 @@
     </div>
 
     <div class="cards-container">
-        <div class="cards">
-            <div class="cards-main">
-                <img src="../src/img//showcase/learning_macbookpro15_front.png" alt="" class="card-pic">
-                <img src="../src/img/showcase/smart brain ipad_ipad_black_portrait.png " alt=" " class=" card-pic ">
+        <div class="cards cards-one">
+            <div class="cards-main cards-main-one">
+                <img src="../src/img//showcase/learning_macbookpro15_front.png" alt="" class="card-pic card-pic-one">
+                <img src="../src/img/showcase/smart brain ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two ">
             </div>
-            <div class=" cards-info "></div>
+            <div class=" cards-info ">
+                <h1>Smart Face recognition app</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A veniam minus iusto qui nulla ex harum maiores, hic cumque corrupti accusamus soluta, dolore magni, ducimus enim reprehenderit libero. Qui, autem? Saepe ab aspernatur omnis, explicabo
+                    consectetur voluptas, alias recusandae odio est tenetur qui placeat nihil sapiente sed fugit. Nisi, architecto. Excepturi ducimus similique aspernatur nesciunt dolorem velit impedit, accusamus pariatur. Assumenda, perferendis nobis
+                    aperiam porro expedita aspernatur dolorum non officiis delectus architecto doloribus repudiandae harum repellat omnis molestiae quis ad recusandae placeat. Praesentium ea voluptatem facere nihil omnis qui voluptatibus. Provident deserunt
+                    iure accusantium eveniet. Ducimus odit alias quaerat perspiciatis suscipit officia quam corporis et nemo odio aliquam cupiditate asperiores architecto fugit blanditiis enim voluptate nisi id repudiandae, illum similique. Nulla temporibus
+                    voluptates maxime sit a eius expedita quaerat quibusdam perferendis corrupti! Deleniti ratione non iste nisi ducimus et, at nemo sed odio unde incidunt eveniet, voluptatibus voluptatem, nesciunt veniam.</p>
+                <h2>links links</h2>
+            </div>
         </div>
-        <div class=" cards ">
-            <div class=" cards-main "></div>
-            <div class=" cards-info "></div>
+        <div class=" cards  cards-two">
+            <div class=" cards-main cards-main-two "></div>
+            <img src="../src/img/showcase/robo ipad_ipad_black_landscape.png" alt="" class="card-pic card-pic-three">
+            <img src="../src/img/showcase/robo iphone 5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four">
         </div>
-        <div class=" cards ">
-            <div class=" cards-main "></div>
-            <div class=" cards-info "></div>
+        <div class=" cards-info ">
+
         </div>
-        <div class=" cards ">
-            <div class=" cards-main "></div>
-            <div class=" cards-info "></div>
-        </div>
-        <div class=" cards ">
-            <div class=" cards-main "></div>
-            <div class=" cards-info "></div>
-        </div>
+    </div>
+    <div class=" cards ">
+        <div class=" cards-main "></div>
+        <div class=" cards-info "></div>
+    </div>
+    <div class=" cards ">
+        <div class=" cards-main "></div>
+        <div class=" cards-info "></div>
+    </div>
+    <div class=" cards ">
+        <div class=" cards-main "></div>
+        <div class=" cards-info "></div>
+    </div>
     </div>
 
 
