--- a/src/index.html
+++ b/src/index.html
@@ -100,19 +100,24 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A veniam minus iusto qui nulla ex harum maiores, hic cumque corrupti accusamus soluta, dolore magni, ducimus enim reprehenderit libero. Qui, autem? Saepe ab aspernatur omnis, explicabo
                 consectetur voluptas, alias recusandae odio est tenetur qui placeat nihil sapiente sed fugit. Nisi, architecto. Excepturi ducimus similique aspernatur nesciunt dolorem velit impedit, accusamus pariatur. Assumenda, perferendis nobis aperiam
                 porro expedita aspernatur dolorum non officiis delectus architecto doloribus repudiandae harum repellat omnis molestiae quis ad recusandae placeat. Praesentium ea voluptatem facere nihil omnis qui voluptatibus. Provident deserunt iure
-                accusantium eveniet. Ducimus odit alias quaerat perspiciatis suscipit officia quam corporis et nemo odio aliquam cupiditate asperiores architecto fugit blanditiis enim voluptate nisi id repudiandae, illum similique. Nulla temporibus voluptates
-                maxime sit a eius expedita quaerat quibusdam perferendis corrupti! Deleniti ratione non iste nisi ducimus et, at nemo sed odio unde incidunt eveniet, voluptatibus voluptatem, nesciunt veniam.</p>
+                accusantium eveniet. eveniet, voluptatibus voluptatem, nesciunt veniam.</p>
             <h2>links links</h2>
         </div>
     </div>
     </div>
-    <div class=" cards ">
+    <div class=" cards cards-five">
         <div class=" cards-main ">
-            <img src="../src/img/showcase/code pen 1.png" alt="" class="card-pic-nine">
-            <img src="../src/img/showcase/code pen 2.png" alt="" class="card-pic-ten">
+            <img src="../src/img/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
+            <img src="../src/img/showcase/game landing_ipad_white_portrait.png" alt="" class="card-pic-ten">
+
+
         </div>
         <div class=" cards-info ">
-
+            <h1>Survey Form and Product Page</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A veniam minus iusto qui nulla ex harum maiores, hic cumque corrupti accusamus soluta, dolore magni, ducimus enim reprehenderit libero. Qui, autem? Saepe ab aspernatur omnis, explicabo
+                consectetur voluptas, alias recusandae odio est tenetur qui placeat nihil sapiente sed fugit. Nisi, architecto. Excepturi ducimus similique aspernatur nesciunt dolorem velit impedit, accusamus pariatur. Assumenda, perferendis nobis aperiam
+                porro expedita aspernatur dolorum non officiis delectus architecto doloribus repudiandae harum repellat omnis molestiae quis ad recusandae placeat. </p>
+            <h2>links links</h2>
         </div>
     </div>
     </div>
