finished up why me section apart from markup

--- a/src/index.html
+++ b/src/index.html
@@ -135,6 +135,19 @@
                 </div>
             </div>
 
+
+
+            <div class="reasons-card">
+                <div class="reasons-card-img reasons-card-img-three"></div>
+                <div class="reasons-card-text">
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                    </p>
+                </div>
+                <div class="reasons-footer  reasons-footer-odd">
+                </div>
+            </div>
+
             <div class="reasons-card">
                 <div class="reasons-card-img reasons-card-img-two"></div>
                 <div class="reasons-card-text ">
@@ -145,15 +158,37 @@
                 <div class="reasons-footer reasons-footer-even">
                 </div>
             </div>
-
             <div class="reasons-card">
-                <div class="reasons-card-img reasons-card-img-three"></div>
+                <div class="reasons-card-img reasons-card-img-four"></div>
                 <div class="reasons-card-text">
                     <h2>Lorem</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
                     </p>
                 </div>
                 <div class="reasons-footer  reasons-footer-odd">
+                </div>
+            </div>
+
+
+            <div class="reasons-card">
+                <div class="reasons-card-img reasons-card-img-five"></div>
+                <div class="reasons-card-text">
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                    </p>
+                </div>
+                <div class="reasons-footer  reasons-footer-even">
+                </div>
+            </div>
+
+            <div class="reasons-card">
+                <div class="reasons-card-img reasons-card-img-six"></div>
+                <div class="reasons-card-text">
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                    </p>
+                </div>
+                <div class="reasons-footer  reasons-footer-even">
                 </div>
             </div>
         </section>
