Working on lazy loading

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <span class="greeting-js"> </span> I'm Joel
         </h1>
         <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a tech lover", "a blogger"]' data-wait="3000"></span></h2>
-        <button class="btn">Click to scroll down</button>
+        <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 
     <section class="cards-container">
