--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
         </h1>
-        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a tech lover", "a blogger"]' data-wait="3000"></span></h2>
+        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a blogger"]' data-wait="3000"></span></h2>
         <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 
@@ -193,6 +193,21 @@
             </div>
         </section>
 
+        <section class="contact-form">
+            <div class="contact-card">
+
+                <div class="hiring"></div>
+                <div class="social"></div>
+            </div>
+        </section>
+        <!-- A <noscript> example using <img> with src and srcset. -->
+        <!--   <img class="lazy" data-srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" data-src="/img/image-to-lazy-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
+    <noscript>
+      <img srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" src="/img/image-to-lazy-load-1x.jpg" alt="Alternative text to describe image.">
+    </noscript> -->
+
+
+        <!-- <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script> -->
 </body>
 
 
