building contact section

--- a/src/index.html
+++ b/src/index.html
@@ -195,10 +195,24 @@
 
         <section class="contact-form">
             <div class="contact-card">
-
-                <div class="hiring"></div>
-                <div class="social"></div>
+                <div class="lets-talk">
+                    <button class="contact-btn">Call +233240070101</button>
+                    <button class="contact btn">Mail alaratj@hotmail.com</button>
+                    <button class="contact-btn">Whatsapp +233509682103</button>
+                </div>
+                <div class="hiring">
+                    <button class="resume">Download Resume</button>
+                </div>
+                <div class="social">
+                    <p> Let's be friends and socialize here:</p>
+                    <a href="" class="social-btn">ln</a>
+                    <a href="" class="social-btn">fb</a>
+                    <a href="" class="social-btn">tw</a>
+                    <a href="" class="social-btn">ig</a>
+                    <a href="" class="social-btn">fcc</a>
+                </div>
             </div>
+
         </section>
         <!-- A <noscript> example using <img> with src and srcset. -->
         <!--   <img class="lazy" data-srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" data-src="/img/image-to-lazy-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
