Adding svg icons fo rcontact

--- a/src/index.html
+++ b/src/index.html
@@ -196,9 +196,9 @@
         <section class="contact-form">
             <div class="contact-card">
                 <div class="lets-talk">
-                    <button class="contact-btn">Call +233240070101</button>
-                    <button class="contact btn">Mail alaratj@hotmail.com</button>
-                    <button class="contact-btn">Whatsapp +233509682103</button>
+                    <p class="contact-btn">Call +233240070101 <img src="./img/contact/phone.svg" alt="phone icon" class="icon"> </p>
+                    <p class="contact btn">Mail alaratj@hotmail.com</p>
+                    <p class="contact-btn">Whatsapp +233509682103</p>
                 </div>
                 <div class="hiring">
                     <button class="resume">Download Resume</button>
@@ -226,7 +226,10 @@
         <!-- Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
         <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
 
-        <!-- Icons made by <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+        <!-- Icons made by <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon"> 
+            www.flaticon.com</a> -->
+
+        <!-- <a target="_blank" href="https://icons8.com/icons/set/gmail">Gmail icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 </body>
 
 
