working on icons

--- a/src/index.html
+++ b/src/index.html
@@ -197,11 +197,12 @@
             <div class="contact-card">
                 <div class="lets-talk">
                     <p class="contact-btn">Call +233240070101 <img src="./img/contact/phone.svg" alt="phone icon" class="icon"> </p>
-                    <p class="contact btn">Mail alaratj@hotmail.com</p>
-                    <p class="contact-btn">Whatsapp +233509682103</p>
+                    <p class="contact btn">Eail alaratj@hotmail.com <img src="./img/contact/email.svg" alt="" class="icon"> </p>
+                    <p class="contact-btn">Gmail tdotonline@gmail.com<img src="./img/contact/icons8-gmail.svg" alt="" class="icon"></p>
+                    <p class="contact-btn">Whatsapp +233509682103 <img src="./img/contact/whatsapp.svg" alt="" class="icon"></p>
                 </div>
                 <div class="hiring">
-                    <button class="resume">Download Resume</button>
+                    <button class="resume">Download Resume <img src="./img/contact/download.svg" alt="" class="icon"></button>
                 </div>
                 <div class="social">
                     <p> Let's be friends and socialize here:</p>
