tweaking contact section

--- a/src/index.html
+++ b/src/index.html
@@ -196,10 +196,13 @@
         <section class="contact-form">
             <div class="contact-card">
                 <div class="lets-talk">
-                    <p class="contact-btn">Call +233240070101 <img src="./img/contact/phone.svg" alt="phone icon" class="icon"> </p>
-                    <p class="contact btn">Eail alaratj@hotmail.com <img src="./img/contact/email.svg" alt="" class="icon"> </p>
-                    <p class="contact-btn">Gmail tdotonline@gmail.com<img src="./img/contact/icons8-gmail.svg" alt="" class="icon"></p>
-                    <p class="contact-btn">Whatsapp +233509682103 <img src="./img/contact/whatsapp.svg" alt="" class="icon"></p>
+                    <p class="contact-btn"><img src="./img/contact/phone.svg" alt="phone icon" class="icon"> <span class="contact-text"> Call  +233240070101 </span><img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
+
+                    <p class="contact-btn"> <img src="./img/contact/email.svg" alt="" class="icon"> <span class="contact-text"> Email alaratj@hotmail.com </span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
+
+                    <p class="contact-btn"> <img src="./img/contact/icons8-gmail.svg" alt="" class="icon"> <span class="contact-text"> Gmail  tdotonline@gmail.com</span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
+
+                    <p class="contact-btn"> <img src="./img/contact/whatsapp.svg" alt="" class="icon"> <span class="contact-text"> Whatsapp  +233509682103 </span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
                 </div>
                 <div class="hiring">
                     <button class="resume">Download Resume <img src="./img/contact/download.svg" alt="" class="icon"></button>
