--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- 
         <section class="contact-form">
             <div class="contact-card">
                 <div class="lets-talk">
@@ -217,7 +217,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <!-- A <noscript> example using <img> with src and srcset. -->
         <!--   <img class="lazy" data-srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" data-src="/img/image-to-lazy-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
     <noscript>
