strucute looking better now

--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,54 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact">
+            <div class="hiring">
+                <a href="">
+                    <button class="hiring-btn">Checkout my Resume
+                        <div class=""> <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </div></button>
+                </a>
+            </div>
+            <div class="message">
+
+                <h2> <img src="./img/contact/rocket-312767.svg" class="jet-icon" alt="">Want to get in touch with lightning speed ? Reach me here then:</h2>
+                <div class="message-list">
+                    <li>
+                        <a href="mailto:alaratj@hotmail.com">
+                            <button><img src="./img/contact/email.svg" alt="" class="message-icon">  alaratj@hotmail.com </button> </a>
+                    </li>
+                    <li>
+                        <a href="mailto:tdotonline@gmail.com">
+                            <button><img src="./img/contact/icons8-gmail.svg" alt="" class="message-icon"> tdotonline@gmail.com</button>
+                        </a>
+                    </li>
+                    <li><button><img src="./img/contact/phone.svg" alt="" class="message-icon"> +233240070101</button></li>
+                    <li><button><img src="./img/contact/whatsapp.svg" alt="" class="message-icon">  +233509682103</button></li>
+                    <!--  <li><button>https://www.linkedin.com/in/alara-joel-b16865b6/</button></li> -->
+                </div>
+                <div class="socialize">
+                    <h2>How about we become buddies here</h2>
+                    <div class="social">
+                        <li>
+                            <a href="https://www.linkedin.com/in/alara-joel-b16865b6/"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/alara_joel"><img src="./img/contact/043-twitter.svg" alt="" class="social-icon"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/alara_joel_stealth/"><img src="./img/contact/025-instagram.svg" alt="" class="social-icon"></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/stealthman22"><img src="./img/contact/038-github.svg" alt="" class="social-icon"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/alaratj"><img src="./img/contact/021-facebook.svg" alt="" class="social-icon"></a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- 
         <section class="contact-form">
             <div class="contact-card">
