--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <li class="nav-list"><a href="" class="nav-items">Who Am I</a></li>
         </ul>
     </nav>
-    <div class="eyes">
+    <!--    <div class="eyes">
         <div class="eye">
             <div class="ball"></div>
         </div>
@@ -32,7 +32,7 @@
 
         </div>
 
-    </div>
+    </div> -->
 
     <main class="hero">
         <time class="time"></time>
@@ -195,18 +195,19 @@
 
         <section class="contact">
             <div class="hiring">
+                <h2>You should checkout my Resume </h2>
                 <a href="">
-                    <button class="hiring-btn">Checkout my Resume
-                        <div class=""> <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </div></button>
+                    <button class="hiring-btn"> Grab a copy
+                         <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </button>
                 </a>
             </div>
             <div class="message">
 
-                <h2> <img src="./img/contact/rocket-312767.svg" class="jet-icon" alt="">Want to get in touch with lightning speed ? Reach me here then:</h2>
-                <div class="message-list">
+                <h2> <img src="./img/contact/flash.svg" class="flash-icon" alt="">Want to get in touch with lightning speed ? Reach me here then:)</h2>
+                <ul class="message-list">
                     <li>
                         <a href="mailto:alaratj@hotmail.com">
-                            <button><img src="./img/contact/email.svg" alt="" class="message-icon">  alaratj@hotmail.com </button> </a>
+                            <button class="message-btn"><img src="./img/contact/email.svg" alt="" class="message-icon"> <span class="message-text">alaratj@hotmail.com</span> </button> </a>
                     </li>
                     <li>
                         <a href="mailto:tdotonline@gmail.com">
@@ -216,56 +217,37 @@
                     <li><button><img src="./img/contact/phone.svg" alt="" class="message-icon"> +233240070101</button></li>
                     <li><button><img src="./img/contact/whatsapp.svg" alt="" class="message-icon">  +233509682103</button></li>
                     <!--  <li><button>https://www.linkedin.com/in/alara-joel-b16865b6/</button></li> -->
-                </div>
-                <div class="socialize">
-                    <h2>How about we become buddies here</h2>
-                    <div class="social">
-                        <li>
-                            <a href="https://www.linkedin.com/in/alara-joel-b16865b6/"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon"></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/alara_joel"><img src="./img/contact/043-twitter.svg" alt="" class="social-icon"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/alara_joel_stealth/"><img src="./img/contact/025-instagram.svg" alt="" class="social-icon"></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/stealthman22"><img src="./img/contact/038-github.svg" alt="" class="social-icon"></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/alaratj"><img src="./img/contact/021-facebook.svg" alt="" class="social-icon"></a>
-                        </li>
-                    </div>
-                </div>
+                </ul>
+            </div>
+            <div class="socialize">
+                <h2>How about we become friends here :)</h2>
+                <ul class="social">
+                    <li>
+                        <a href="https://www.linkedin.com/in/alara-joel-b16865b6/"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/alara_joel"><img src="./img/contact/043-twitter.svg" alt="" class="social-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/alara_joel_stealth/"><img src="./img/contact/025-instagram.svg" alt="" class="social-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/stealthman22"><img src="./img/contact/038-github.svg" alt="" class="social-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/alaratj"><img src="./img/contact/021-facebook.svg" alt="" class="social-icon"></a>
+                    </li>
+                </ul>
+            </div>
             </div>
         </section>
 
-        <!-- 
-        <section class="contact-form">
-            <div class="contact-card">
-                <div class="lets-talk">
-                    <p class="contact-btn"><img src="./img/contact/phone.svg" alt="phone icon" class="icon"> <span class="contact-text"> Call  +233240070101 </span><img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
+        <footer class="footer">
+            <span> <img src="./img/contact/copyright.svg" alt="" class="copy-icon"> Designed and developed by <a href="https://twitter.com/alara_joel"> Alara O. Joel</a> a.k.a <a href="https://github.com/stealthman22"> Stealthman22</a></span>
+        </footer>
 
-                    <p class="contact-btn"> <img src="./img/contact/email.svg" alt="" class="icon"> <span class="contact-text"> Email alaratj@hotmail.com </span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
 
-                    <p class="contact-btn"> <img src="./img/contact/icons8-gmail.svg" alt="" class="icon"> <span class="contact-text"> Gmail  tdotonline@gmail.com</span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
 
-                    <p class="contact-btn"> <img src="./img/contact/whatsapp.svg" alt="" class="icon"> <span class="contact-text"> Whatsapp  +233509682103 </span> <img src="./img/contact/clipboard (1).svg" alt="" class="icon clipboard"></p>
-                </div>
-                <div class="hiring">
-                    <button class="resume">Download Resume <img src="./img/contact/download.svg" alt="" class="icon"></button>
-                </div>
-                <div class="social">
-                    <p> Let's be friends and socialize here:</p>
-                    <a href="" class="social-btn">ln</a>
-                    <a href="" class="social-btn">fb</a>
-                    <a href="" class="social-btn">tw</a>
-                    <a href="" class="social-btn">ig</a>
-                    <a href="" class="social-btn">fcc</a>
-                </div>
-            </div>
-
-        </section> -->
         <!-- A <noscript> example using <img> with src and srcset. -->
         <!--   <img class="lazy" data-srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" data-src="/img/image-to-lazy-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
     <noscript>
