smooth scroll completed

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
         <span class="nav-logo">A_S</span>
         <ul class="nav-ul">
 
-            <li class="nav-list"><a href="#home" class="nav-items">Home</a></li>
-            <li class="nav-list"><a href="#showcase" class="nav-items">Showcase</a></li>
-            <li class="nav-list"><a href="#achievements" class="nav-items">Achievements</a></li>
-            <li class="nav-list"><a href="#whyme" class="nav-items">Reasons</a></li>
-            <li class="nav-list"><a href="#talk" class="nav-items">Contact</a></li>
-            <li class="nav-list"><a href="" class="nav-items">Blog</a></li>
-            <li class="nav-list"><a href="" class="nav-items">About Me</a></li>
+            <li class="nav-link"><a href="#home" class="nav-items">Home</a></li>
+            <li class="nav-link"><a href="#showcase" class="nav-items">Showcase</a></li>
+            <li class="nav-link"><a href="#achievements" class="nav-items">Achievements</a></li>
+            <li class="nav-link"><a href="#whyme" class="nav-items">Reasons</a></li>
+            <li class="nav-link"><a href="#talk" class="nav-items">Contact</a></li>
+            <li class="nav-link"><a href="" class="nav-items">Blog</a></li>
+            <li class="nav-link"><a href="" class="nav-items">About Me</a></li>
         </ul>
     </nav>
     <!--    <div class="eyes">
@@ -53,10 +53,13 @@
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
                 <p class="info-body">An app that recognizes the faces in pictures and predicts it's location with a bounding box.
-                    <p> The front-end was built in react, it's backend utilizes an express server running on-top of node.js</p>
+                    <p> The front-end was built in react, it's backend utilizes an express server running on-top of node.js
+                    </p>
                     <p>It also boasts of a fully functional SQL database built with PostgreSQL </p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt="" class="info-icons"></a>  <a href=""> <img src="./img/contact/link.svg" alt="" class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons"> </a></span>
             </div>
         </div>
         <div class=" cards  cards-two">
@@ -72,7 +75,9 @@
                     <p>It uses react for the UI, and redux for state management, so the state of the search box can be recorded at all times. The profiles structure are fetched from an API.
                     </p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt="" class="info-icons"></a>  <a href=""> <img src="./img/contact/link.svg" alt="" class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons"> </a></span>
             </div>
         </div>
 
@@ -88,7 +93,9 @@
                     <p>It has a beautiful carousel that highlights the teams main strengths and skills.</p>
                     <p>It is built in vanilla js and is simple to set up.</p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt="" class="info-icons"></a>  <a href=""> <img src="./img/contact/link.svg" alt="" class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons"> </a></span>
             </div>
         </div>
         <div class=" cards  cards-four">
@@ -100,8 +107,11 @@
                 <h1 class="info-head">Stealth Logistics</h1>
                 <p class="info-body">An elegant landing page for a logistics office, to help them get clients contact information and meeting schedule quickly</p>
                 <p>It uses an form that submits directly to an email account, for fast processing. </p>
-                <p>And with a click, potential clients can be redirected to a social page to learn more about the company</p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt="" class="info-icons"></a>  <a href=""> <img src="./img/contact/link.svg" alt="" class="info-icons"> </a></span>
+                <p>And with a click, potential clients can be redirected to a social page to learn more about the company
+                </p>
+                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons"> </a></span>
             </div>
         </div>
 
@@ -119,7 +129,9 @@
                     <p>A product page for a gaming shop, that deal in all forms of consoles and kits</p>
                     <p>A survey form that can be used to get valuable feedback from customers and stakeholders</p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt="" class="info-icons"></a>  <a href=""> <img src="./img/contact/link.svg" alt="" class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons"> </a></span>
             </div>
         </div>
     </section>
@@ -204,7 +216,7 @@
             <h2>You should checkout my Resume </h2>
             <a href="">
                 <button class="hiring-btn"> Grab a copy
-                         <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </button>
+                    <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </button>
             </a>
         </div>
         <div class="message">
@@ -213,20 +225,24 @@
             <ul class="message-list">
                 <li>
                     <a href="mailto:alaratj@hotmail.com">
-                        <button class="message-btn"><img src="./img/contact/email.svg" alt="" class="message-icon"> <span class="message-text">alaratj@hotmail.com</span> </button> </a>
+                        <button class="message-btn"><img src="./img/contact/email.svg" alt="" class="message-icon">
+                            <span class="message-text">alaratj@hotmail.com</span> </button> </a>
                 </li>
                 <li>
                     <a href="mailto:tdotonline@gmail.com">
-                        <button><img src="./img/contact/icons8-gmail.svg" alt="" class="message-icon"> tdotonline@gmail.com</button>
+                        <button><img src="./img/contact/icons8-gmail.svg" alt="" class="message-icon">
+                            tdotonline@gmail.com</button>
                     </a>
                 </li>
                 <li><button><img src="./img/contact/phone.svg" alt="" class="message-icon"> +233240070101</button></li>
-                <li><button><img src="./img/contact/whatsapp.svg" alt="" class="message-icon">  +233509682103</button></li>
+                <li><button><img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103</button>
+                </li>
                 <!--  <li><button>https://www.linkedin.com/in/alara-joel-b16865b6/</button></li> -->
             </ul>
         </div>
         <div class="socialize">
-            <h2>How about we become friends here :) <img src="./img/contact/048-arrow.svg" alt="" class="down-icon"></h2>
+            <h2>How about we become friends here :) <img src="./img/contact/048-arrow.svg" alt="" class="down-icon">
+            </h2>
             <ul class="social">
                 <li>
                     <a href="https://www.linkedin.com/in/alara-joel-b16865b6/" target="_blank"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon"></a>
@@ -251,10 +267,11 @@
     <footer class="footer">
         <p> <img src="./img/contact/copyright.svg" alt="" class="copy-icon"> Designed and developed by <a href="https://twitter.com/alara_joel" target="_blank"> Alara O. Joel</a> a.k.a <a href="https://github.com/stealthman22" target="_blank"> Stealthman22</a>
         </p>
-        <p>Authors of the background images can be linked here at <a href="https://www.pexels.com/@alara-joel-597602/collections/" target="_blank">pexels</a> and Quickly build your mockups here
+        <p>Authors of the background images can be linked here at <a href="https://www.pexels.com/@alara-joel-597602/collections/" target="_blank">pexels</a> also Quickly build your mockups here
             <a href="https://mockuphone.com/" target="_blank">mockuphone</a> </p>
         <p> Some icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>, <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank">Vectors Market</a>, <a href="https://www.flaticon.com/authors/pixel-perfect"
-                title="Pixel perfect" target="_blank">Pixel perfect</a> and <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency" target="_blank">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a>            </p>
+                title="Pixel perfect" target="_blank">Pixel
+                perfect</a> and <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency" target="_blank">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a> </p>
         <p>Other icons from <a target="_blank" href="https://icons8.com">Icons8</a> and
             <a href="https://freesvg.org/" target="_blank">freesvg</a></p>
     </footer>
@@ -268,15 +285,11 @@
     </noscript> -->
 
 
-    <!-- <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script> -->
-    <!--  -->
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
-
-    <!-- Icons made by <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon"> 
-            www.flaticon.com</a> -->
-
-    <!-- <a target="_blank" href="https://icons8.com/icons/set/gmail">Gmail icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js">
+    </script>
+    <script>
+        const scroll = new SmoothScroll('a[href*="#"]');
+    </script>
 </body>
 
 
