updating changes, gradient almost done

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav border_gradient">
         <span class="nav-logo">A_S</span>
         <ul class="nav-ul">
 
@@ -40,7 +40,7 @@
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
         </h1>
-        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a blogger"]' data-wait="3000"></span></h2>
+        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a blogger"]' data-wait="2000"></span></h2>
         <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 
