--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,9 @@
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js">
     </script>
     <script>
-        const scroll = new SmoothScroll('a[href*="#"]');
+        const scroll = new SmoothScroll('a[href*="#"]', {
+            speed: 700
+        });
     </script>
 </body>
 
