changed the footer color

--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
                             tdotonline@gmail.com</button>
                     </a>
                 </li>
-                <li><button><img src="./img/contact/phone.svg" alt="" class="message-icon"> +233240070101</button></li>
+                <li><button><img src="./img/contact/phone.svg" alt="" class="message-icon"><a href="tel: +233240070101" >+233240070101 </a></button></li>
                 <li><button><img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103</button>
                 </li>
                 <!--  <li><button>https://www.linkedin.com/in/alara-joel-b16865b6/</button></li> -->
