--- a/src/index.html
+++ b/src/index.html
@@ -288,9 +288,7 @@
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js">
     </script>
     <script>
-        const scroll = new SmoothScroll('a[href*="#"]', {
-            speed: 700
-        });
+        const scroll = new SmoothScroll('a[href*="#"]');
     </script>
 </body>
 
