--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     </section>
 
     <section class="achieve" id="achievements">
-
+        <h1>Content coming soon, so move along &#x1F63B;</h1>
     </section>
 
     <section class="reasons" id="whyme">
